--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -456,6 +456,7 @@ Requires:       java-21-openjdk
   sudo apt-get update
   sudo apt-get install -y pacman fakeroot fakechroot
   
+  ls $JAR_PATH
   cd package/arch
   # Copy the JAR for building (use absolute path)
   cp "$(realpath ../../$JAR_PATH)" seemake-${VERSION}.jar
